feat(user): auth and show orgs

--- a/user/src/localization/ar/layout.json
+++ b/user/src/localization/ar/layout.json
@@ -1,14 +1,9 @@
 {
   "navLink": {
     "organizations": "المنظمات",
-    "users": "المستخدمين",
-    "categories": "الأصناف",
-    "cities": "المدن",
-    "warehouses": "المستودعات",
-    "employees": "الموظّفين",
-    "admins": "المشرفين",
-    "settings": "الإعدادات",
-    "about": "حول التطبيق",
-    "policy": "السياسات والخصوصية"
+    "sessions": "الجلسات",
+    "desserts": "المأكولات والمشروبات",
+    "statistics": "الإحصائيات",
+    "my-organizations": "المنظمات"
   }
 }
