--- a/user/src/localization/en/layout.json
+++ b/user/src/localization/en/layout.json
@@ -1,16 +1,9 @@
 {
   "navLink": {
     "organizations": "Organizations",
-    "users": "Users",
-    "categories": "Categories",
-    "cities": "Cities",
-    "warehouses": "Warehouses",
-    "employees": "Employees",
-    "billing": "Billing",
-    "reports": "Reports",
-    "admins": "Administrators",
-    "settings": "Settings",
-    "about": "About",
-    "policy": "Policy"
+    "my-organizations": "Organizations",
+    "sessions": "sessions",
+    "desserts": "desserts",
+    "statistics": "statistics"
   }
 }
