--- a/user/src/localization/en/session.json
+++ b/user/src/localization/en/session.json
@@ -2,13 +2,19 @@
   "add": "Adding a new session",
   "edit": "Modification of the session \"{{name}}\"",
   "remove": "Remove session",
-
+  "addDessert": "Add dessert",
+  "endSession": "End session",
   "table": {
     "username": "Username"
   },
   "form": {
     "username": "Username",
-    "numberOfPersons": "Number of persons"
+    "numberOfPersons": "Number of persons",
+    "formAddDessert": "Add desserts",
+    "create": "Add",
+    "count": "Number of desserts",
+    "dessert": "Dessert",
+    "end": "End"
   },
   "message": {
     "success": {
