--- a/user/src/localization/en/layout.json
+++ b/user/src/localization/en/layout.json
@@ -1,7 +1,7 @@
 {
   "navLink": {
-    "organizations": "Organizations",
-    "my-organizations": "Organizations",
+    "organizations": "organizations",
+    "my-organizations": "organizations",
     "sessions": "sessions",
     "desserts": "desserts",
     "statistics": "statistics"
