feat(user): add plan ui

--- a/user/src/localization/ar/layout.json
+++ b/user/src/localization/ar/layout.json
@@ -4,6 +4,7 @@
     "sessions": "الجلسات",
     "desserts": "المأكولات والمشروبات",
     "statistics": "الإحصائيات",
-    "my-organizations": "المنظمات"
+    "my-organizations": "المنظمات",
+    "plans": "الباقات"
   }
 }
