--- a/user/src/localization/en/layout.json
+++ b/user/src/localization/en/layout.json
@@ -4,6 +4,7 @@
     "my-organizations": "organizations",
     "sessions": "sessions",
     "desserts": "desserts",
-    "statistics": "statistics"
+    "statistics": "statistics",
+    "plans": "plans"
   }
 }
