fix(user): errors

--- a/user/src/localization/ar/layout.json
+++ b/user/src/localization/ar/layout.json
@@ -2,6 +2,8 @@
   "navLink": {
     "organizations": "المنظمات",
     "sessions": "الجلسات",
+    "subscriptions": "الاشتراكات",
+    "subscription-orders": "طلبات الاشتراك",
     "desserts": "المأكولات والمشروبات",
     "statistics": "الإحصائيات",
     "my-organizations": "المنظمات",
