feat(user): finish stats

--- a/user/src/localization/en/layout.json
+++ b/user/src/localization/en/layout.json
@@ -7,6 +7,7 @@
     "sessions": "sessions",
     "desserts": "desserts",
     "statistics": "statistics",
-    "plans": "plans"
+    "plans": "plans",
+    "offers": "offers"
   }
 }
