--- a/user/src/localization/en/organization.json
+++ b/user/src/localization/en/organization.json
@@ -5,7 +5,9 @@
 
   "table": {
     "name": "Name",
-    "sessionHourlyRate": "Session hourly rate"
+    "sessionHourlyRate": "Session hourly rate",
+    "status": "Status",
+    "username": "Username"
   },
   "form": {
     "name": "Name",
@@ -15,7 +17,9 @@
     "success": {
       "edit": "The organization has been modified successfully",
       "add": "The organization has been added successfully",
-      "remove": "The organization has been removed successfully"
+      "remove": "The organization has been removed successfully",
+      "approve": "The organization has been approved successfully",
+      "refuse": "The organization has been refused successfully"
     }
   }
 }
