--- a/user/src/localization/ar/layout.json
+++ b/user/src/localization/ar/layout.json
@@ -7,6 +7,7 @@
     "desserts": "المأكولات والمشروبات",
     "statistics": "الإحصائيات",
     "my-organizations": "المنظمات",
-    "plans": "الباقات"
+    "plans": "الباقات",
+    "offers": "العروض"
   }
 }
