--- a/user/src/localization/ar/organization.json
+++ b/user/src/localization/ar/organization.json
@@ -5,7 +5,9 @@
 
   "table": {
     "name": "اسم المنظمة",
-    "sessionHourlyRate": "تسعير الساعة"
+    "sessionHourlyRate": "تسعير الساعة",
+    "status": "الحالة",
+    "username": "اسم المستخدم"
   },
   "form": {
     "name": "الاسم",
@@ -15,7 +17,9 @@
     "success": {
       "edit": "تم تعديل المنظمة بنجاح",
       "add": "تم إضافة المنظمة بنجاح",
-      "remove": "تم إزالة المنظمة بنجاح"
+      "remove": "تم إزالة المنظمة بنجاح",
+      "approve": "تم قبول المنظمة بنجاح",
+      "refuse": "تم رفض المنظمة بنجاح"
     }
   }
 }
