feat(user): finish translating

--- a/user/src/localization/ar/common.json
+++ b/user/src/localization/ar/common.json
@@ -8,6 +8,48 @@
   "next": "التالي",
   "search": "ابحث...",
   "pagination": "{{from}} - {{to}} من {{count}}",
+  "organization": "منظمة",
+  "organizations": "المنظمات",
+  "Subscription Expired": "الاشتراك منتهي",
+  "Expires in": "صالح لمدة",
+  "day(s)": "يوم/أيام",
+  "SYP/hour": "ل.س/ساعة",
+  "approved": "مقبول",
+  "refused": "مرفوض",
+  "pending": "بانتظار الرد",
+  "active": "فعال",
+  "expired": "منتهي",
+  "cancelled": "تم الالغاء",
+  "started": "جارية",
+  "ended": "منتهية",
+  "drink": "مشروب",
+  "meal": "وجبة",
+  "month": "شهر",
+  "year": "سنة",
+  "free": "مجانية",
+  "Session": "جلسة ل",
+  "None": "لايوجد",
+  "Start": "وقت البداية",
+  "End": "وقت النهاية",
+  "Desserts": "الطلبات",
+  "Subtotal": "تكلفة الجلسة",
+  "Additional Cost": "تكلفة الطلبات",
+  "Total Price": "السعر الكلي",
+  "Previous Page": "الصفحة السابقة",
+  "Next Page": "الصفحة التالية",
+  "Status": "الحالة",
+  "Date From": "من تاريخ",
+  "Date To": "إلى تاريخ",
+  "Clear filters": "مسح الفلاتر",
+  "Revenue by Day": "الأرباح حسب اليوم",
+  "Revenue by Month": "الأباح حسب الشهر",
+  "Desserts Sales": "مبيعات المشروبات والوجبات",
+  "Sessions by Status": "الجلسات حسب الحالة",
+  "Desserts Revenue": "أرباح المشروبات و الوجبات",
+  "Sessions Revenue": "أرباح الجلسات",
+  "Subscription Plans": "الباقات",
+  "Back to My Organizations": "العود إالى المنظمات",
+  "Purchase": "شراء",
   "input": {
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور"
