--- a/user/src/localization/ar/dessert.json
+++ b/user/src/localization/ar/dessert.json
@@ -9,7 +9,8 @@
     "type": "النوع"
   },
   "form": {
-    "name": "الاسم",
+    "name_ar": "الاسم باللغة العربية",
+    "name_en": "الاسم باللغة الانجليزية",
     "price": "السعر",
     "type": "النوع"
   },
