--- a/user/src/localization/en/common.json
+++ b/user/src/localization/en/common.json
@@ -6,8 +6,50 @@
   "cancel": "Cancel",
   "submit": "Submit",
   "next": "Next",
-  "search": "Seach...",
+  "search": "Search...",
   "pagination": "{{from}} - {{to}} of {{count}}",
+  "organization": "organization",
+  "organizations": "organizations",
+  "Subscription Expired": "Subscription Expired",
+  "Expires in": "Expires in",
+  "day(s)": "day(s)",
+  "SYP/hour": "SYP/hour",
+  "approved": "approved",
+  "refused": "refused",
+  "pending": "pending",
+  "active": "active",
+  "expired": "expired",
+  "cancelled": "cancelled",
+  "started": "started",
+  "ended": "ended",
+  "drink": "drink",
+  "meal": "meal",
+  "month": "month",
+  "year": "year",
+  "free": "free",
+  "Session": "Session",
+  "None": "None",
+  "Start": "Start",
+  "End": "End",
+  "Desserts": "Desserts",
+  "Subtotal": "Subtotal",
+  "Additional Cost": "Additional Cost",
+  "Total Price": "Total Price",
+  "Previous Page": "Previous Page",
+  "Next Page": "Next Page",
+  "Status": "Status",
+  "Date From": "Date From",
+  "Date To": "Date To",
+  "Clear filters": "Clear filters",
+  "Revenue by Day": "Revenue by Day",
+  "Revenue by Month": "Revenue by Month",
+  "Desserts Sales": "Desserts Sales",
+  "Sessions by Status": "Sessions by Status",
+  "Desserts Revenue": "Desserts Revenue",
+  "Sessions Revenue": "Sessions Revenue",
+  "Subscription Plans": "Subscription Plans",
+  "Back to My Organizations": "Back to My Organizations",
+  "Purchase": "Purchase",
   "email": "Email",
   "phone": "Phone",
   "password": "Password",
