--- a/user/src/localization/en/common.json
+++ b/user/src/localization/en/common.json
@@ -50,9 +50,16 @@
   "Subscription Plans": "Subscription Plans",
   "Back to My Organizations": "Back to My Organizations",
   "Purchase": "Purchase",
+  "Total Sessions and Revenue": "Total Sessions and Revenue",
+  "Total Sessions": "Total Sessions",
+  "Total Revenue": "Total Revenue",
+  "Desserts by Day": "Desserts by Day",
+  "Revenue": "Revenue",
   "email": "Email",
   "phone": "Phone",
   "password": "Password",
+  "Count": "Count",
+  "Name": "Name",
   "error": {
     "notFound": "Not Found 404",
     "noData": "No data",
