fix(api): statistics

--- a/user/src/localization/ar/session.json
+++ b/user/src/localization/ar/session.json
@@ -4,6 +4,7 @@
   "remove": "إزالة الجلسة",
   "addDessert": "أضافة مشروب أو وجبة",
   "endSession": "إنهاء الجلسة",
+  "cancelSession": "إلغاء الجلسة",
   "table": {
     "username": "اسم الجلسة"
   },
@@ -14,13 +15,15 @@
     "create": "إضافة",
     "count": "كمية الطلب",
     "dessert": "مشروب أو وجبة",
-    "end": "إنهاء"
+    "end": "إنهاء",
+    "cancel": "إلغاء"
   },
   "message": {
     "success": {
       "edit": "تم تعديل الجلسة بنجاح",
       "add": "تم إضافة الجلسة بنجاح",
       "end": "تم إنهاء الجلسة بنجاح",
+      "cancel": "تم إالغاء الجلسة بنجاح",
       "remove": "تم إزالة الجلسة بنجاح"
     }
   }
